--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        {% if user.is_authenticated %}
+        {% if user.name == id %}
         {% if user.username %}
             {{ user.username }}的个人博客
             {% else %}
@@ -104,7 +104,7 @@
       </div>
       <div class="modal-body">
         <div class="form-group">
-            <label for="exampleInputEmail1">博客账号</label>
+            <label for="blogID">博客账号</label>
             <input type="text" class="form-control" name="blogID" required placeholder="账号" id="blogID">
             </div>
             <div class="form-group">
