--- a/blog/templates/blog/content.html
+++ b/blog/templates/blog/content.html
@@ -125,7 +125,7 @@
           </div>
         <div class="modal-footer">
         <div class="row">
-            <div class="col-xs-2 col-lg-offset-10">
+            <div class="col-lg-2 col-lg-offset-10">
                 <button type="button" class="btn btn-primary " data-dismiss="modal" aria-label="Close">取消</button>
                 <button type="submit"  class="btn btn-primary ">提交</button>
             </div>
