添加了增加label的页面，但不完善

--- a/blog/templates/blog/content.html
+++ b/blog/templates/blog/content.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="col-lg-1">
                         <br><br><br>
-                        <a href="base.html" target="view_window"><span class="glyphicon glyphicon-plus"></span></a>
+                        <a href="/id={{ id }}/label/add/" target="add label"><span class="glyphicon glyphicon-plus"></span></a>
                     </div>
                 </div>
                 <div class="row">
@@ -99,7 +99,7 @@
                     </div>
                     <div class="col-lg-1">
                         <br><br><br>
-                        <a href="base.html" target="view_window"><span class="glyphicon glyphicon-plus"></span></a>
+                        <a href="base.html" target="/id={{ id }}/label/add/"><span class="glyphicon glyphicon-plus"></span></a>
                     </div>
                 </div>
                 <div class="row">
