--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -49,7 +49,7 @@
                         <div class="col-lg-1 col-lg-offset-3 col-xs-offset-0 col-xs-2">
                             <button type="button"  class="btn btn-warning btn-sm"><h5 style="margin: 0"><span class="glyphicon glyphicon-edit"></span>       修改</h5></button>
                         </div>
-                        <div class="col-lg-1 col-xs-1 col-md-offset-3 col-xs-offset-3">
+                        <div class="col-lg-1 col-xs-1 col-lg-offset-0 col-md-offset-3 col-xs-offset-3">
                             <button type="button"  class="btn btn-danger btn-sm"><h5 style="margin: 0;"><span class="glyphicon glyphicon-remove"></span>       删除</h5></button>
                         </div>
                     {% endif %}
@@ -81,7 +81,7 @@
                         <div class="col-lg-1 col-lg-offset-3 col-xs-offset-0 col-xs-2">
                             <button type="button"  class="btn btn-warning btn-sm"><h5 style="margin: 0"><span class="glyphicon glyphicon-edit"></span>       修改</h5></button>
                         </div>
-                        <div class="col-lg-1 col-xs-1 col-md-offset-3 col-xs-offset-3">
+                        <div class="col-lg-1 col-xs-1 col-lg-offset-0 col-md-offset-3 col-xs-offset-3">
                             <button type="button"  class="btn btn-danger btn-sm"><h5 style="margin: 0;"><span class="glyphicon glyphicon-remove"></span>       删除</h5></button>
                         </div>
                     {% endif %}
@@ -113,7 +113,7 @@
                         <div class="col-lg-1 col-lg-offset-3 col-xs-offset-0 col-xs-2">
                             <button type="button"  class="btn btn-warning btn-sm"><h5 style="margin: 0"><span class="glyphicon glyphicon-edit"></span>       修改</h5></button>
                         </div>
-                        <div class="col-lg-1 col-xs-1 col-md-offset-3 col-xs-offset-3">
+                        <div class="col-lg-1 col-xs-1 col-lg-offset-0 col-md-offset-3 col-xs-offset-3">
                             <button type="button"  class="btn btn-danger btn-sm"><h5 style="margin: 0;"><span class="glyphicon glyphicon-remove"></span>       删除</h5></button>
                         </div>
                     {% endif %}
